--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel = "stylesheet" type = "text/css" href = "style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet"/>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src = "myscript.js"></script>
 
   <title>Weather App</title>
