Closed span tage

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p><span id="icon"></span></p>
 
     <div class="scrollmenu">
-      <span id="hourly"></div>
+      <span id="hourly"></span>
     </div>
 
 
