Changed web-bar color

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
  <!-- <script type="text/javascript" src="data.json"></script> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#ffbdbd">
   <link rel = "stylesheet" type = "text/css" href = "style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet"/>
