--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <p><span id="date"></span></p>
     <p>It's <span id="temp"></span>&#8451 in  <span id="name"></span></p>
     <p><span id="icon"></span></p>
+    <p><span id="summary"></span></p>
 
     <div class="scrollmenu">
       <span id="hourly"></span>
