--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#ffbdbd">
   <link rel = "stylesheet" type = "text/css" href = "style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -14,12 +13,34 @@
 </head>
 
 <body>
+  <div id="searchButton" style="display:block;">
+      <img src = images/search.svg id="searchIcon">
+  </div>
+
+<!-- <div id="searchBar" style="display:none;">
+</div> -->
+
+    <form id="theForm" onsubmit="return false" style="display:none;">
+      <input type="text" id="search">
+    </form>
+
 
     <h1>Weather App.</h1>
 
     <p><span id="date"></span></p>
-    <p>It's <span id="temp"></span>&#8451 in  <span id="name"></span></p>
+
+      <div id="celsius" style="display:block;">
+        <p>It's <span id="temp"></span>&deg;C in <span id="name"></span>   <img src = images/temp.svg class="tempIcon"></p>
+      </div>
+      <div id="fahrenheit" style="display:none;">
+        <p>It's <span id="tempf"></span>&deg;F in <span id="namef"></span>   <img src = images/temp.svg class="tempIcon"></p>
+      </div>
+      <div id="tempChange">
+
+      </div>
+
     <p><span id="icon"></span></p>
+
     <p><span id="summary"></span></p>
 
     <div id="hourly-forecast" style="display:block;">
