--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#ffbdbd">
   <link rel = "stylesheet" type = "text/css" href = "style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
